<resources>
    <string name="app_name">Food Saver</string>

    <!--  Main Activity  -->
    <string name="posts_btn">View Posts</string>
    <string name="owner_login_btn">Owner Login</string>
    <string name="registration_btn">Owner Registration</string>
    <string name="submission_btn"> Owner Submission</string>

    <!--  Registration Activity  -->
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="email_error"></string>
    <string name="password_error"></string>

    <!--  Login Activity  -->
    <string name="login_btn">Login</string>

    <!--  User Activity  -->
    <string name="user_email">Your Email:</string>
    <string name="user_uid">UID:</string>
    <string name="user_sign_out">Sign Out</string>

    <!--  Posts Activity  -->
    <string name="posts_label">Posts</string>

    <!--  Submission Activity  -->
    <string name="invalid_name">Enter Valid Name</string>
    <string name="invalid_number">Enter valid phone number</string>
    <string name="invalid_storename">Enter valid store name</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="invalid_website">Enter Valid Website</string>
</resources>