<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">

    <TextView
        android:id="@+id/UserEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/DisplayUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DisplayUserEmail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/UserUIDLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/UserUIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_uid"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/DisplayUserUID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DisplayUserUID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/UserSignOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UserSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:onClick="signOut"
        android:text="@string/user_sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>